# VITAL-VAULT

./: .gitignore  README.md
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: audit.py  exceptions.py  rbac.py  security.py  storage.py
backend/app/models/: __init__.py  appointment.py  audit.py  base.py  category.py  clinic.py  doctor.py  medical_record.py  medication.py  patient.py  reminder.py  subscription.py  user.py
backend/app/repositories/: appointment_repo.py  audit_repo.py  medication_repo.py  record_repo.py  reminder_repo.py  user_repo.py
backend/app/routers/: admin.py  appointments.py  auth.py  medications.py  records.py  reminders.py  subscriptions.py  timeline.py  users.py
backend/app/schemas/: appointment.py  auth.py  common.py  medication.py  record.py  reminder.py  timeline.py  user.py
backend/app/services/: ai_service.py  auth_service.py  notification_service.py  record_service.py
backend/app/tasks/: __init__.py  ai_extraction.py  celery_app.py  maintenance.py  notifications.py  ocr.py  reminders.py
backend/app/utils/: ocr_utils.py  rrule_utils.py
backend/docker/: Dockerfile.api  Dockerfile.worker
backend/tests/: conftest.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Appointments.tsx  Dashboard.tsx  LandingPage.tsx  Upload.tsx  (+7 more)
(+2 files in other folders)
